syntax = "proto3";
option go_package = "./generated";

import "attributes.proto";
import "command.proto";

message Job {
  repeated Command commands = 1;

  repeated string env = 2;
  repeated string resources = 3;

  string if = 5;
  bool parallel = 6;
  string name = 7;

  Attributes attributes = 8;
}

message JobResult {
  int64 code = 1;
  string message = 2;

  string outlog = 3;
  string errlog = 4;
}
