syntax = "proto3";
option go_package = "./generated";

message QueueInfo {
  string address = 2;
}
